--- a/pyexcel-xlsx.yml
+++ b/pyexcel-xlsx.yml
@@ -1,11 +1,12 @@
 overrides: "pyexcel.yaml"
-name: "pyexcel-xlsx"
-nick_name: xlsx
-version: 0.5.6
-current_version: 0.5.6
-release: 0.5.6
+name: "pyexcel-xlsxy"
+nick_name: xlsxy
+version: 0.5.7
+current_version: 0.5.7
+release: 0.5.7
 file_type: xlsx
 dependencies:
   - openpyxl>=2.5.0
   - pyexcel-io>=0.5.3
+  - Xlsxwriter
 description: A wrapper library to read, manipulate and write data in xlsx and xlsm format
