--- a/.moban.yml
+++ b/.moban.yml
@@ -4,7 +4,7 @@ configuration:
   - "commons/templates"
   - "setupmobans/templates"
   - ".moban.d"
-  configuration: pyexcel-xlsx.yml
+  configuration: pyexcel-yuri.yml
 targets:
   - README.rst: README.rst
   - setup.py: setup.py
